# compiler

./: .gitignore  ChangeLog.md  README.md  binary  binary.s  pcl-compiler.cabal  stack.yaml
app/: Main.hs
examples/: bubblesort.pcl  hanoi.pcl  manually.bit  manually.bit.s  primes.pcl  puts.bit  reverse.pcl  toy.pcl
src/Language/PCL/: Codegen.hs  Emit.hs  PrettyPrinter.hs  Token.hs
src/Language/PCL/Annotated/: Environment.hs  Lexer.x  LexerString.x  Parser.hs  Semantic.hs  Syntax.hs
src/Text/Parsec/: Tok.hs
src/Toy/: Alex.x  LLVM.hs
