cabal-version: 1.12
name:           pcl-compiler
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/kderme/pcl-compiler#readme>
homepage:       https://github.com/kderme/pcl-compiler#readme
bug-reports:    https://github.com/kderme/pcl-compiler/issues
author:         Kostas Dermentzis
maintainer:     k.dermenz@gmail.com
copyright:      2019 Konstantinos Dermentzis
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/kderme/pcl-compiler

library
  exposed-modules:
                     Lib
                   , Language.PCL.Annotated.Lexer
                   , Language.PCL.Annotated.LexerString
                   , Language.PCL.Annotated.Parser
                   , Language.PCL.Annotated.Semantic
                   , Language.PCL.Annotated.Syntax
                   , Language.PCL.Annotated.Environment
                   , Language.PCL.PrettyPrinter
                   , Language.PCL.Codegen
                   , Language.PCL.Token
                   , Text.Parsec.Tok
                   , Toy.Alex
                   , Toy.LLVM
  other-modules:
    Paths_pcl_compiler
  hs-source-dirs:
      src
  build-depends:
                     base >=4.7 && <5
                   , array
                   , bytestring
                   , containers
                   , deepseq
                   , llvm-hs
                   , llvm-hs-pure
                   , mtl
                   , parsec
                   , wl-pprint

  Build-tools:       alex
  default-language: Haskell2010

executable pcl-compiler-exe
  main-is: Main.hs
  other-modules:
      Paths_pcl_compiler
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                     base >=4.7 && <5
                   , pcl-compiler

  default-language: Haskell2010

test-suite pcl-compiler-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_pcl_compiler
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , pcl-compiler
  default-language: Haskell2010
